--- a/connectify/package.json
+++ b/connectify/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
-    "firebase": "^11.0.1",
+    "firebase": "^11.0.2",
     "firebase-admin": "^12.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
