--- a/package.json
+++ b/package.json
@@ -1,60 +1,34 @@
 {
-<<<<<<< HEAD
-  "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "chart.js": "^3.7.0",
-    "emailjs-com": "^3.2.0",
-    "node": "^22.10.0",
-    "react-chartjs-2": "^5.2.0"
-=======
   "name": "connectify",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "browserify-zlib": "^0.2.0",
     "chart.js": "^3.9.1",
-    "core-js": "^3.39.0",
-    "cors": "^2.8.5",
-    "cra-template": "1.2.0",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.0.2",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.1",
-    "https-browserify": "^1.0.0",
-    "nodemailer": "^6.9.16",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "querystring-es3": "^0.2.1",
+    "node": "^22.10.0",
     "react": "^18.3.1",
-    "react-app-rewired": "^2.2.1",
-    "react-chartjs-2": "^3.0.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
-    "regenerator-runtime": "^0.14.1",
     "slick-carousel": "^1.8.1",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
     "url": "^0.11.4",
-    "util": "^0.12.5",
-    "web-vitals": "^4.2.3",
-    "webpack": "^4.47.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.3"
+    "web-vitals": "^4.2.3"
   },
   "scripts": {
-    "lint": "eslint .",
-    "clean": "rimraf node_modules build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -86,6 +60,5 @@
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0",
     "rimraf": "^6.0.1"
->>>>>>> 25bd546f19f53097cdd28c04ab89c80aa1a2082a
   }
 }
